fix : alignement carrousel

--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
 * {
-  box-sizing: border-box; 
+  box-sizing: border-box;
   margin: 0;
+}
+
+body {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 img {
@@ -8,22 +15,21 @@ img {
   height: auto;
 }
 
-body {
-  height: 100vh;
-  width: 100vh;
+.carrousel {
+    width: 100vw;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
 
+
 .carrousel_parent-ecrans {
-  display: flex; 
+  display: flex;
   overflow-x: scroll;
   scroll-behavior: smooth;
-    scroll-snap-type: x mandatory;
+  scroll-snap-type: x mandatory;
   gap: 10px;
-  
+  text-align: center;
 }
 
 .carrousel_ecran {
@@ -34,6 +40,7 @@ body {
 
 .carrousel_picture {
   position: relative;
+  width: 600px;
 }
 
 .carrousel_btn {
@@ -69,4 +76,4 @@ body {
 
 .carrousel_liste-liens a.actif {
   color: green;
-} 
+}
